Fix alignment

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+#title {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
 .center {
   text-align: center;
   margin: auto;
@@ -70,7 +75,7 @@ input[type='text'] {
 }
 
 .col-md-3 .badge {
-  margin-left: -3.125rem;
+  margin-left: -5rem;
 }
 
 .accordion-button {
@@ -89,6 +94,14 @@ input[type='text'] {
 
 .accordion-header {
   line-height: 1.5;
+}
+
+.accordion-body {
+  padding: 1rem 0rem;
+}
+
+.accordion-body .col-md-3 {
+  margin-left: -2.5rem;
 }
 
 .row .col-md-4 {
